hphp/test/zend/good/ext/standard/tests/strings/http_build_query_variation3.php.skipif
<?php 
  if (version_compare(PHP_VERSION, '5.4.0', '<')) die("skip this test if PHP_VERSION is less than 5.4.0");
?>