hphp/test/zend/bad/ext/xml/tests/bug26614.php.skipif
<?php 
require_once("skipif.inc");
if (defined("LIBXML_VERSION")) die('skip expat test'); 
?>